added build script, inclusioni of applycolormap and commented triggers to include stitching in the js build. Stitching compilation does not work with those changes, see https://github.com/opencv/opencv/issues/22170 That is why it is commented out

--- a/modules/stitching/CMakeLists.txt
+++ b/modules/stitching/CMakeLists.txt
@@ -10,4 +10,4 @@ if(BUILD_SHARED_LIBS AND BUILD_opencv_world AND OPENCV_WORLD_EXCLUDE_EXTRA_MODUL
 endif()
 ocv_define_module(stitching opencv_imgproc opencv_features2d opencv_calib3d opencv_flann
                   OPTIONAL opencv_cudaarithm opencv_cudawarping opencv_cudafeatures2d opencv_cudalegacy opencv_cudaimgproc ${STITCHING_CONTRIB_DEPS}
-                  WRAP python)
+                  WRAP python js)
